--- a/styles/style.css
+++ b/styles/style.css
@@ -16,19 +16,15 @@ main {
     display: flex;
     justify-content: center;
     align-items: center;
-    /* position: absolute; */
-    /* top: 30%;
-    left: 30%; */
 }
 
 section {
     width: 336px;
     min-height: 236px;
-    /* margin: auto; */
     border: 1px solid #C4C4C4;
     border-radius: 10px;
     overflow: hidden;
-    /* box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.1); */
+    box-shadow: 0px 5px 10px 5px rgba(120, 8, 145, 0.1);
 }
 
 .yellow-line {
@@ -53,35 +49,30 @@ h1 {
 .sort-tasks {
     display: flex;
     justify-content: flex-end;
-    padding-right: 25px;
-    min-width: 99%;
+    padding: 10px;
+    min-width: 92%;
 }
 
 .sort-tasks div {
-    background-image: url(./img/grey_down_34.svg);
+    background-image: url(../img/grey_down_34.svg);
     width: 25px;
     height: 15px;
 }
 .sort-tasks:hover div {
-    background-image: url(./img/black_down_73.png);
+    background-image: url(../img/black_down_73.svg);
 }
 .sort-tasks.reversed div {
-    background-image: url(./img/grey_up_90.png);
+    background-image: url(../img/grey_up_90.svg);
 }
 .sort-tasks.reversed:hover div {
-    background-image: url(./img/black_up_91.png);
+    background-image: url(../img/black_up_91.svg);
 }
-
 
 
 .input-container {
     border: 1px solid #C4C4C4;
     border-radius: 10px;
-    margin-bottom: 20px;
-}
-
-.input-container {
-    /* margin: 12px 25px; */
+    margin: 10px;
 }
 
 .item {
@@ -95,7 +86,6 @@ h1 {
 
 .task {
     width: 75%;
-    /* height: 40px; */
     font-size: 14px;
     line-height: 16px;
     border: none;
@@ -135,7 +125,6 @@ button {
     background-color: #833AE0;
     border-radius: 40px;
     color: white;
-    /* justify-content: center; */
 }
 
 .button-round {
@@ -149,8 +138,6 @@ button {
     font-size: 14px;
     line-height: 16px;
 }
-
-
 
 .action {
     padding: 10px;
@@ -169,5 +156,3 @@ button {
 .add-button:hover .action {
     background-color: #9953F1; 
 }
-
-
